# Cobra

./: .gitignore  CMakeLists.txt  README.md  cobra_core.pyd  setup.py  test_array.py  test_bindings.py  test_runtime.py
benchmarks/: runner.py
benchmarks/cpu/: matmul_bf16.py
benchmarks/dataframe/: fusion_pipeline.py
benchmarks/gaudi/: resnet50_inference.py
benchmarks/gpu/: black_scholes.py
benchmarks/macro/: nbody.py
benchmarks/micro/: elementwise.py  reduction.py
benchmarks/sklearn/: kmeans.py
cobra/: __init__.py  patcher.py  profiler.py
cobra/compiler/: expr.py  jit.py
cobra/runtime/: __init__.py  manager.py
cobra/sklearn/: cluster.py
cobra/stdlib/: array.py  frame.py
cobra/tools/: profiler_cli.py
examples/: phase10_floating_point.py  phase11_conditional_logic.py  phase12_loop_demonstration.py  phase13_cobra_array_integration.py  phase14_function_calls.py  phase8_ast_analysis.py
examples/notebooks/: Cobra_vs_Pandas.ipynb
src/: CMakeLists.txt  bindings.cpp
src/jit/: Compiler.cpp  GaudiDialect.td  GaudiOps.td
src/jit/emitter/: GaudiEmitter.cpp
src/jit/lowering/: CobraToLinalg.cpp  LinalgToGPU.cpp  LinalgToGaudi.cpp  LinalgToVector.cpp
src/jit/transforms/: Fusion.cpp  MatmulToAMX.cpp
src/memory/: Device.h  MemoryManager.cpp  MemoryManager.h
tests/: main.cpp
